--- a/style.css
+++ b/style.css
@@ -5,3 +5,81 @@
 html {
   font-size: 10px;
 }
+
+body {
+  margin: 0;
+  width: 100vw;
+  min-height: 100vh;
+  background: radial-gradient(rgb(18, 192, 218),#111);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  padding: 0;
+}
+
+main {
+background-color: white;
+  color: black;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.title {
+  text-align: center;
+  font-family: fantasy, sans-serif;
+  border: 0.4rem solid rgb(18, 192, 218);
+  margin: 3px;
+  text-decoration: underline;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  border: 0.5rem solid black;
+}
+
+.grid-items {
+  border: 0.1rem solid gray;
+  font-size:2rem;
+  background-color:white;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#box3, #box7, #box10, #box11, #box12, #box15 {
+  border-left: 0.5rem solid black;
+}
+
+#box1, #box2, #box3, #box4, #box5, #box8, #box9, #box10, #box11 {
+  border-bottom: 0.5rem solid black;
+}
+
+.prompt {
+  position: absolute;
+  top:0%;
+  right:0%;
+}
+
+.answer {
+  width: 50%;
+  height: 50%;
+  text-align: center;
+  margin: 10px;
+  color: rgb(18, 192, 218);
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.special {
+  border: none;
+  font-size: 2rem;
+}
+
+@media (min-width:475px) {
+  html {
+    font-size: 16px;
+  }
+}
